--- a/config/database.yml
+++ b/config/database.yml
@@ -17,5 +17,5 @@ test:
 production:
   <<: *default
   database: telegram_bot_db
-  username: telgram_bot
+  username: telegram_bot
   password: password
